traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:1: error: value unary_! is not a member of Unit
  while (!posFinale()) {
         ^TraversalByColumn:9: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^TraversalByColumn:9: warning: enclosing method posFinale has result type Unit: return value discarded
      return true
      ^TraversalByColumn:11: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^TraversalByColumn:11: warning: enclosing method posFinale has result type Unit: return value discarded
      return false
      ^