traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  while (!posFinale()) {
    	posSuivante()
  }
}


def posFinale() {
  if (getMondeLargeur() == getX() && getY() == getMondeHauteur())
      return true
  else
  		return false
}

def posSuivante() {
  if (getY() == getMondeHauteur() - 1) {
    	setPos(getX()+1, 0)
  }
  else
  		setPos(getX(), getY() + 1)
}